syntax = "proto3";

package catalog;

option go_package = "shared/proto/indexer;indexer";

service IndexerService {
  rpc GetMovieMagnetic(GetMovieMagneticRequest) returns (GetMovieMagneticResponse);
  rpc GetTVShowMagnetic(GetTVShowMagneticRequest) returns (GetTVShowMagneticResponse);
}

message GetMovieMagneticRequest {
  string name = 1;
  string release_date = 2;
}

message GetMovieMagneticResponse {
  repeated Torrents torrents = 1;
}

message GetTVShowMagneticRequest {
  string name = 1;
  string release_date = 2;
  int32 episode = 3;
  int32 season = 4;
}

message GetTVShowMagneticResponse {
  repeated Torrents torrents = 1;
}

message Torrents {
  string magnetic_uri = 1;
  uint32 size = 2;
  uint32 seeders = 3;
  string tracker = 4;
}
